# velocity.ai

./: .gitignore  README.md  TODO  shared.txt
BE/: db.sqlite3  pyproject.toml
BE/UserApp/: models.py  schemas.py  serializers.py  urls.py  utils.py  views.py
BE/UserApp/migrations/: 0001_initial.py
BE/app/: settings.py  urls.py
LAMBDA/: message-from-sqs-to-lambda-worker.txt  velocity-analyzer.py  velocity-croper.py  velocity-manager.py  velocity-vision.py  velocity-worker.py  zipping-with-pinecone-foraws.txt
